lib/src/compiler/tests/testdata/errors/13.out
error[E104]: unexpected negative number
 --> line:6:12
  |
6 |     $a in (-1..0)
  |            ^^ this number can not be negative
  |